<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/account"
        android:icon="@android:drawable/ic_menu_manage"
        app:showAsAction="always"
        android:title="Change account" />
</menu>